--- a/deploy.yaml
+++ b/deploy.yaml
@@ -37,7 +37,7 @@ spec:
       name: ca-issuer
       kind: ClusterIssuer
       group: cert-manager.io
-  allowUnsafeConfigurations: false
+  allowUnsafeConfigurations: true
 #  pause: false
   updateStrategy: SmartUpdate
   upgradeOptions:
@@ -45,7 +45,7 @@ spec:
     apply: recommended
     schedule: "0 4 * * *"
   pxc:
-    size: 3
+    size: 1
     image: percona/percona-xtradb-cluster:8.0.19-10.1
 #    schedulerName: mycustom-scheduler
 #    readinessDelaySec: 15
